src/entities/track/ui/track.scss
$track-img-size-xl: 60px;

.track {
  display: flex;
  justify-content: space-between;
  margin: 5px 0;
  background-color: #f9f9f9;
  border: 5px solid #f9f9f9;
  border-radius: 10px;

  &_active {
    border: 5px solid #FF5F0F;
  }

  &__left_side {
    min-width: 200px;
    display: flex;
    align-items: center;
    text-overflow: ellipsis;
	  white-space: nowrap;
	  overflow: hidden;
  }

  &__right_side {
    display: flex;
    flex-direction: row;
    gap: 10px;
    font-size: 1rem;
    justify-content: center;
    align-items: center;
  }

  &__img {
    border-radius: 5px;
    width: $track-img-size-xl;
    height: $track-img-size-xl;
  }

  &__info {
    margin-left: 20px;
    text-overflow: inherit;
    white-space: inherit;
    overflow: inherit;
  }

  &__delete-btn,
  &__like-btn,
  &__add-btn,
  &__share-btn {
    cursor: pointer;
  }

	&__artist {
		margin-top: 5px;
		color: #636363;
		font-size: 1rem;
		font-weight: 400;
    text-overflow: inherit;
    white-space: inherit;
    overflow: inherit;

		&__artist_link {
			text-decoration: none;
			color: #636363;
		
			&:visited {
				color: #636363;
			}
		
			&:hover {
			  text-decoration: underline;
			}
		}
	}

  &__liked {
    opacity: 0.5;

    &:hover {
      opacity: 0.5;
    }
  }
  
  &__name {
    color: #1f1f1f;
    font-size: 1rem;
    font-weight: 400;
    text-overflow: inherit;
    white-space: inherit;
    overflow: inherit;
  }

  &:hover {
    border: 5px solid #FF5F0F;
    //transform: translateX(-20px);
  }
}

/* @media (max-width: 768px) {
  .track {
    padding: 8px;

    &__img {
      width: 75px;
      height: 75px;
    }

    &__duration_icon {
      width: 22px;
      height: 22px;
    }

    &__name {
      font-size: 20px;
    }

    &__artist {
      font-size: 18px;
    }

    &__right_side {
      font-size: 18px;
    }

    &:hover {
      transform: none;
    }

    &:active {
      transform: translateX(-16px);
    }
  }
}

@media (max-width: 480px) {
  .track {
    padding: 5px;

    &__img {
      width: 50px;
      height: 50px;
    }

    &__duration_icon {
      width: 19px;
      height: 19px;
    }

    &__name {
      font-size: 16px;
    }

    &__artist {
      font-size: 14px;
    }

    &__right_side {
      font-size: 14px;
    }

    &:hover{
      transform: translateX(-12px);
    }
    
    &:active {
      transform: translateX(-12px);
    }
  }
} */

